+ fix DependencyDownloader & fix Command